# apolo-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI.md  Makefile  README.md  RELEASE.md  VERSION.txt  setup.cfg  towncrier.toml
.github/workflows/: ci.yaml  codeql-analysis.yml  test-release.yml
CHANGELOG.D/: 3217.bugfix.md  3227.feature.md  3228.feature.md  3233.feature.md  3236.feature.md  3249.feature.md  3262.misc  3263.misc.md  3268.feature.md  3285.feature.md  3292.bugfix.md  3297.misc  3307.bugfix.md  3317.feature  3351.feature.md  3369.feature  3387.feature  3388.feature  3389.feature  3411.feature  3417.misc  3425.bugfix  3430.feature  3435.feature.md  3461.feature
apolo-cli/: pyproject.toml  setup.cfg
apolo-cli/docs/: README.md  SUMMARY.md  admin.md  app-template.md  app.md  job.md  secret.md  shortcuts.md  vcluster.md
apolo-cli/src/apolo_cli/: __init__.py  admin.py  app_template.py  apps.py  click_types.py  config.py  main.py  mcp_command.py  mcp_integration.py  plugin.py  secrets.py  template_schema_utils.py  utils.py  vcluster.py
apolo-cli/src/apolo_cli/formatters/: admin.py  app_templates.py  app_values.py  apps.py  buckets.py  vcluster.py
apolo-cli/tests/: conftest.py
apolo-cli/tests/e2e/: conftest.py  test_e2e_admin.py  test_e2e_blob_storage.py  test_e2e_images.py  test_e2e_jobs.py  test_e2e_share.py  test_e2e_storage.py
apolo-cli/tests/unit/: conftest.py  factories.py  test_admin.py  test_alias.py  test_app_template_edge_cases.py  test_app_templates.py  test_apps.py  test_click_utils.py  test_mcp_integration.py  test_secrets.py  test_shell_completion.py  test_template_schema_utils.py
apolo-cli/tests/unit/formatters/: test_admin_formatters.py  test_apps_formatters.py  test_config_formatters.py  test_vcluster.py
apolo-cli/tests/unit/formatters/ascii/: TestAppEventsFormatter.test_app_events_formatter_0.ref  TestAppEventsFormatter.test_app_events_formatter_with_message_0.ref  TestAppEventsFormatter.test_simple_app_events_formatter_0.ref  TestBlobFormatter.test_long_formatter[formatter1]_0.ref  TestBlobFormatter.test_long_formatter[formatter1]_1.ref  TestBlobFormatter.test_long_formatter[formatter1]_2.ref  TestBlobFormatter.test_long_formatter[formatter1]_3.ref  TestBlobFormatter.test_long_formatter[formatter1]_4.ref  TestBlobFormatter.test_long_formatter[formatter1]_5.ref  TestBlobFormatter.test_long_formatter[formatter1]_6.ref  TestBlobFormatter.test_long_formatter[formatter1]_7.ref  TestBlobFormatter.test_long_formatter[formatter1]_8.ref  TestConfigFormatter.test_output_for_tpu_presets_0.ref  test_kube_formatter_0.ref  test_simple_kube_formatter_0.ref
apolo-sdk/: pyproject.toml  setup.cfg
apolo-sdk/docs/: apps.rst  functions_reference.rst  reference.rst  vcluster_reference.rst
apolo-sdk/src/apolo_sdk/: __init__.py  _apps.py  _buckets.py  _client.py  _clusters.py  _config.py  _config_factory.py  _errors.py  _jobs.py  _server_cfg.py  _vcluster.py
apolo-sdk/tests/: conftest.py  test_apps.py  test_config.py  test_config_factory.py  test_login_utils.py  test_vcluster.py
build-tools/: cli-command-checks.py  cli-help-generator.py  site-help-generator.py  version.py
requirements/: base.txt  ci.txt  dev.txt  mypy.txt
