[project]
name = "apolo-sdk"
version = "25.5.0"
description = "Apolo SDK"
authors = [
    {name = "Apolo Team", email = "dev@apolo.us"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "aiohttp>=3.11.3",
    "pyyaml>=5.0",
    "python-jose>=3.3.0",
    "python-dateutil>=2.7.0",
    "aiobotocore>=2.3.0,<3.0",
    "aiodocker>=0.24.0",
    "certifi",
    "toml>=0.10.0",
    "azure-storage-blob>=12.8.1,!=12.9.0",
    "google-auth>=2.0.2",
    "importlib-metadata>=4.11.4; python_version<'3.11'",
    "packaging>=20.4",
    "neuro-admin-client>=24.12.2",
    "neuro-config-client>=24.12.4"
]

[project.urls]
Homepage = "https://github.com/neuro-inc/platform-client-python"
Repository = "https://github.com/neuro-inc/platform-client-python"
Documentation = "https://github.com/neuro-inc/platform-client-python"

[tool.poetry]
name = "apolo-sdk"
version = "25.5.0"
description = "Apolo SDK"
packages = [{include = "apolo_sdk", from = "src"}, {include = "neuro_sdk", from = "src"}]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"